2010-02-09	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/web.pm: In web_node_record_user_agent call node_modify() 
	directly instead of pfcmd node edit. It's more performant (avoids 
	spawning a shell) and it'll avoid trying to adjust vlan. Fixes #908;
	http://www.packetfence.org/mantis/view.php?id=908

	* pf/sbin/pfsetvlan: Created an ALRM signal handler that report an
	error and does nothing else. This is a workaround to prevent pfsetvlan
	to crash when a Net::Telnet or a Net::Appliance::Session call times out,
	sending a SIGALRM. Fixes #907;
	http://www.packetfence.org/mantis/view.php?id=907 

	Upstream bug: https://rt.cpan.org/Public/Bug/Display.html?id=54415

	Local bug to track upstream: 
	http://www.packetfence.org/mantis/view.php?id=902

2010-02-02	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/configuration/interfaces_add.php, 
	pf/html/admin/configuration/interfaces_edit.php,
	pf/html/admin/configuration/networks_add.php,
	pf/html/admin/configuration/networks_edit.php,
	pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php,
	pf/html/admin/configuration/violation_add.php, 
	pf/html/admin/configuration/violation_edit.php, 
	pf/html/admin/node/edit.php, pf/html/admin/person/edit.php, 
	pf/html/admin/scan/edit.php, pf/html/admin/violation/edit.php: Errors
	are now shown in Web admin's popups instead of automatically closing 
	the popups without checking return status. Fixes #899;
	http://www.packetfence.org/mantis/view.php?id=899

2010-02-01	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/database-backup-and-maintenance.sh: Added a once-a-month
	archiving of locationlog_history entries older than a year.

2010-01-29	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Added documentation
	on how to configure the ISR 1800 with PacketFence and added it to
	the supported switches section

	* pf/NEWS, pf/README_SWITCHES, 