@@ -36,7 +36,7 @@ Bug fixes
 - Performance fixes (#908)
 - Captive portal stability fixes (#892)
 - Improved error reporting in the web administration panel and cli (#898, #899)
-- Mitigated Net::Telnet problems with perl threads (#907)
+- Mitigated Net::Telnet problems with perl threads (#903, #907)
 - Misc. stability fixes
 
 --------------------------------------------------------------------------------
